Revision history for Perl extension App::Sqitch

1.3.2
     - Fixed Snowflake warehouse and role setup to properly quote identifiers.
       Thanks to @marc-marketparts for the report (#685).
     - Fixed a bug reworking a change when a rework directory is configured
       but not created. Thanks to @jfeaver for the report (#686).
     - Output the list of changes to be deployed or reverted when --verbose is
       specified at least twice. Thanks to @vectro for the PR (#702).
     - Fixed the formatting of the log and plan commands to allow empty or `0`
       separators in lists of things (such as `%{0}t` for a list of tags).
       Thanks to @web-vertalo for the pull request (#703).
       Updated the MySQL Tutorial to use 5.7 features. Thanks to Vlad
       Safronov for the PR (#705).
     - Deprecated the `no_prompt` and `no_prompt` attributes of
       App::Sqitch::Engine in favor of passing booleans to the revert and
       verify methods. The attributes still exist for reverse compatibility,
       but now emit warnings and will be removed in the future. Thanks to
       Thanks to @vectro for the PR (#704).
     - Added a warning for a double extension on the file names created
       by the `add` command. Thanks to @blairjordan for the PR (#724)!
     - Added the `revert.strict` boolean configuration variable which, when
       set to true, requires that a change to revert to be specified. It also
       disables the `rebase` and `checkout` commands, though the
       `rebase.strict` and `checkout.strict` variables, respectively, may
       override it. Use this variable to prevent accidental reverts in
       sensitive environments. Thanks to @vectro for the PR (#719; revised in
       #735)!
     - Fixed test failures due to a bug fix in the Perl URI module
       (libwww-perl/URI#13). Thanks to @bobfang for the report (#744)!
     - Fixed test failures due to a change in the generation of DBI DSN by